--- a/xabber/src/main/res/layout/chat_viewer_fragment.xml
+++ b/xabber/src/main/res/layout/chat_viewer_fragment.xml
@@ -13,29 +13,26 @@
      along with this program. If not, see http://www.gnu.org/licenses/.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/root_view"
-    >
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/root_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar_default"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-
         android:background="?attr/colorPrimary"
         android:elevation="8dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="?attr/toolbar_popup_theme"
-        >
+        app:popupTheme="?attr/toolbar_popup_theme">
 
         <include
             android:id="@+id/contact_title"
-            layout="@layout/contact_title"
-            />
+            layout="@layout/contact_title"/>
 
     </android.support.v7.widget.Toolbar>
 
@@ -50,8 +47,7 @@
         android:dividerHeight="0dp"
         android:listSelector="@android:color/transparent"
         android:scrollbars="vertical"
-        tools:listitem="@layout/chat_viewer_outgoing_message"
-        />
+        tools:listitem="@layout/chat_viewer_outgoing_message"/>
 
     <LinearLayout
         android:id="@+id/input_layout"
@@ -60,8 +56,7 @@
         android:layout_alignParentBottom="true"
         android:background="?attr/chat_input_background"
         android:elevation="8dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/button_emoticon"
@@ -71,8 +66,7 @@
             android:background="?android:selectableItemBackground"
             android:padding="8dp"
             android:src="@drawable/ic_mood_black_24dp"
-            android:tint="?attr/chat_input_button_color"
-            />
+            android:tint="?attr/chat_input_button_color"/>
 
         <github.ankushsachdeva.emojicon.EmojiconEditText
             android:id="@+id/chat_input"
@@ -88,32 +82,28 @@
             android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
             android:maxLines="4"
             android:minHeight="40dp"
-            android:scrollbars="vertical"
-         />
+            android:scrollbars="vertical"/>
 
         <ImageButton
             android:id="@+id/button_attach"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:background="?android:selectableItemBackground"
             android:padding="8dp"
             android:src="@drawable/ic_attach_file_black_24dp"
-            android:tint="?attr/chat_input_button_color"
-            android:layout_gravity="bottom"
-            />
-
+            android:tint="?attr/chat_input_button_color"/>
 
         <ImageButton
             android:id="@+id/button_security"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:background="?android:selectableItemBackground"
             android:contentDescription="@string/otr_encryption"
             android:padding="8dp"
             android:src="@drawable/ic_security_grey_24dp"
-            android:tint="?attr/chat_input_button_color"
-            android:layout_gravity="bottom"
-            />
+            android:tint="?attr/chat_input_button_color"/>
 
         <ImageButton
             android:id="@+id/button_send_message"
@@ -124,8 +114,7 @@
             android:contentDescription="@string/chat_send"
             android:padding="8dp"
             android:src="@drawable/ic_send_black_24dp"
-            android:tint="?attr/chat_input_button_color"
-            />
+            android:tint="?attr/chat_input_button_color"/>
     </LinearLayout>
 
 </RelativeLayout>
